        REGRESSION (XHR Caching): Uncacheable responses sent by Rails through Apache are cached         https://bugs.webkit.org/show_bug.cgi?id=83925         <rdar://problem/11231790>

Reviewed by Antti Koivisto.

        Added subtests to http/tests/cache/subresource-expiration-2.html.

        * platform/network/ResourceResponseBase.cpp:
        (WebCore::ResourceResponseBase::parseCacheControlDirectives): Honor first max-age
        instead of the last. New behavior matches both Firefox and IE.



Canonical link: https://commits.webkit.org/101441@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@114165 268f45cc-cd09-0410-ab3c-d52691b4dbfc